--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Booking System Management (Local Demo)</title>
+    <title>Hotel Booking System Management (Demonstration)</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Use Inter font -->
@@ -26,9 +26,9 @@
 
     <div id="app" class="container mx-auto p-4 sm:p-6 lg:p-8">
         <header class="mb-8 border-b pb-4">
-            <h1 class="text-3xl font-bold text-gray-800">Hotel Booking System - Admin Portal (LOCAL DEMO)</h1>
-            <p class="text-sm text-gray-500 mt-1">Manage room inventory and guest reservations using Local Storage.</p>
-            <p id="user-info" class="text-xs mt-2 text-red-600 font-medium">Database: Local Storage. Data is not shared.</p>
+            <h1 class="text-3xl font-bold text-gray-800">Hotel Booking System - Admin Portal (DEMONSTRATION)</h1>
+            <p class="text-sm text-gray-500 mt-1">Manage room inventory and guest reservations in real-time.</p>
+            <p id="user-info" class="text-xs mt-2 text-gray-500 font-medium">Database: Persistent Browser Storage.</p>
         </header>
         
         <!-- TABS FOR NAVIGATION -->
